--- a/src/main/resources/static/templates/home.html
+++ b/src/main/resources/static/templates/home.html
@@ -1,4 +1,4 @@
-<div class="app">
+
     <div class="main">
         <div class="container-box">
             <div class="k-header" style="background-color: rgb(93, 103, 164);">
@@ -7,8 +7,6 @@
         </div>
 
     </div>
-    <div class="znxy-questions-buttons-container">
-        <a class="znxy-questions-submit-button"  ng-href="/#/main">开始
-        </a>
-    </div>
-</div>
+
+    <a href="/#/main" class="btn btn-primary btn-lg1 "  role="button">开始</a>
+
