--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -48,7 +48,11 @@
     padding: 15px;
     margin-bottom: 10px;
 }
-
+.main #context .context-footer {
+    width: 100%;
+    height: 226px;
+    background: #f2f2f2;
+}
 .app {
     height: 100%;
 }
